# python

./: Module 1 The Evolution and the Engine.ipynb  Module 2 Masterclass in Python Data Structures.ipynb  Module 3 Python Libraries.ipynb  Module 4 File Systems & Module Architecture.ipynb  Module 5 Memory, GIL, & Internal Performance.ipynb  Module 6 Advanced Python Concepts.ipynb  Module 7 Modern Tooling and Packaging.ipynb  Module_5_Memory,_GIL,_&_Internal_Performance.ipynb  README.md
module4_examples/: example.toml  processor.py  pyproject.toml  utils_bad.py  utils_good.py
module4_examples/mypackage/: __init__.py  core.py  utils.py
